--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="buttons">
       <button id="yes">Sim 💛</button>
-      <button id="no">Não 😢</button>
+      <button id="no" disabled>Não 😢</button>
     </div>
 
     <div id="response"></div>
