--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uma Pergunta Importante! 💛</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="container">
-    <h1>Eu gosto muito de você Linda 🥺</h1>
-    <p>Podemos nos encontrar para conversarmos com calma?</p>
+    <div class="icon">🥺</div>
+    <h1>Eu gosto muito de você, Linda</h1>
+    <p>Me desculpa? Podemos nos encontrar para conversar com calma?</p>
 
     <div class="buttons">
-      <button id="yes">Sim 💛</button>
-      <button id="no" disabled>Não 😢</button>
+      <button id="yes">Sim, claro! 💛</button>
+      <button id="no">Não 😢</button>
     </div>
 
     <div id="response"></div>
