--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Uma Pergunta Importante! 💛</title>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+  <title>Tenho algo para te dizer... 🌑</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
-    <div class="icon">🥺</div>
+  <div id="mystery-box" class="mystery-container">
+    <div class="lock-icon">🔒</div>
+    <h2>Tenho uma pergunta importante...</h2>
+    <p>Você está pronta para ver?</p>
+    <button id="reveal-btn">Clique para revelar</button>
+  </div>
+
+  <div id="main-content" class="container hidden">
+    <div class="icon">✨</div>
     <h1>Eu gosto muito de você, Linda</h1>
-    <p>Me desculpa? Podemos nos encontrar para conversar com calma?</p>
+    <p>Eu sei que as coisas ficaram chatas, mas queria conversar com calma. Podemos nos ver ?</p>
 
     <div class="buttons">
-      <button id="yes">Sim, claro! 💛</button>
+      <button id="yes">Sim</button>
       <button id="no">Não 😢</button>
     </div>
 
