--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 </head>
 <body>
 
-  <div id="app" class="screen dark">
-    <div class="content fade">
-      <div class="icon">🔒</div>
-      <h1>Você confia em mim?</h1>
-      <button class="next">Sim...</button>
-    </div>
-  </div>
+  <div id="app" class="screen dark"></div>
 
   <script src="script.js"></script>
 </body>
